Fix share button alignment

--- a/components/PageUserProfile/Main/Main.module.sass
+++ b/components/PageUserProfile/Main/Main.module.sass
@@ -93,11 +93,9 @@
         +trans
 
 .share
-    position: absolute
-    right: 90px
+    margin-left: auto
     +m
-        position: unset
-        right: unset
+        margin-left: unset
         display: flex
         align-items: center
 
